# SecureWealthTwin

./: .gitignore  .~lock.PSBs Hackathon Series - 2026 Problem Statement  Cyber Security & Fraud in Wealth Management.docx#  Implementation_Plan_SecureWealth.md  PSBs Hackathon Series - 2026 Problem Statement  Cyber Security & Fraud in Wealth Management.docx  README.md  extract_text.py  netlify.toml
SecureWealth-AI-main/: pyproject.toml  railway.json  requirements.txt
SecureWealth-AI-main/app/: __init__.py  config.py  main.py
SecureWealth-AI-main/app/agents/: __init__.py  orchestrator.py  risk_assessment.py  simulation.py  wealth_advisor.py
SecureWealth-AI-main/app/api/: __init__.py  middleware.py  routes.py
SecureWealth-AI-main/app/data/: __init__.py  mock_data.py  synthetic.py  synthetic_profiles.json  synthetic_transactions.csv
SecureWealth-AI-main/app/data/models/: behavior_classifier.pkl
SecureWealth-AI-main/app/engines/: __init__.py  market_data.py  rule_engine.py  wealth_intelligence.py
SecureWealth-AI-main/app/models/: __init__.py  internal.py  request.py  response.py  schemas.py
SecureWealth-AI-main/app/rag/: __init__.py  knowledge_base.py  pipeline.py
SecureWealth-Project/: .gitignore  README.md
SecureWealth-Project/backend/: .env.template  INTEGRATION_GUIDE.md  __init__.py  alembic.ini  main.py  main_patch.py  package-lock.json  package.json  pytest.ini  railway.json  requirements.txt
SecureWealth-Project/frontend/: craco.config.js  package-lock.json
SecureWealth-Project/scratch/: fix_db.py  migrate_otp.py
(+96 files in other folders)
