[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure-wealth-twin-ai"
version = "0.1.0"
description = "SecureWealth Twin AI — API-first intelligent banking backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "yfinance>=0.2.40",
    "alpha-vantage>=2.3.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
